--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -10,97 +10,8 @@ body{
     background-color: #fff;
 }
 
-.contenedor{
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    overflow: hidden;
-    border: 1px solid #000;
-}
-
-header{
-    width: 100%;
-    height: 600px;
-    background-image: url(../img/portada.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    color: #fff;
-}
-
-header .menu{
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px 0;
-}
-
-header .menu a{
-    display: inline-block;
-    padding: 15px;
-    font-size: 20px;
-    font-weight: 300;
-    text-decoration: none;
-    color: #fff;
-}
-
-header .menu a:hover{
-    text-decoration: underline;
-}
-
-header .contenedor-textos-header{
-    margin: 120px 0;
-    text-align: center;
-}
-
-header .contenedor-textos-header .titulo-header{
-    font-size: 80px;
-    margin-bottom: 5px;
-}
-
-header .contenedor-textos-header .linea{
-    width: 700px;
-    height: 2px;
-    margin: auto;
-    background-color: rgb(173, 177, 235);
-}
-
-header .contenedor-textos-header p{
-    margin: 16px 0;
-    font-size: 20px;
-    font-weight: 300;
-}
-
-header .contenedor-textos-header a{
-    display: inline-block;
-    border: 1px solid rgb(173, 177, 235);
-    margin: 8px;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-header .contenedor-textos-header a:hover{
-    background: rgb(173, 177, 235);
-} 
-
 /*** main ***/
 
-main .acerca-de{
-    background-color: #f0f3f5;
-    padding: 30px 0;
-    text-align: center;
-}
-
-main .acerca-de .contenedor-texto-acerca h2{
-    font-size: 20px;
-    font-weight: 900;
-    margin-bottom: 20px;
-}
-
-main .acerca-de .contenedor-texto-acerca p{
-    color: #999;
-    font-weight: 400;
-}
 
 /** Layout **/
 .container{
@@ -265,8 +176,9 @@ main .acerca-de .contenedor-texto-acerca p{
 
 
     .lo-mejor-salud img{
-        display: inline-block;
+        display: block;
         margin: auto;
+      
     }
     
 }
